export default {
  welcome: 'Welcome to PodoTodo',
  welcomeSubtitle:
    'You can easily manage all of your daily tasks in\nPodoTodo for free',
  todoTitle: 'My Tasks',
  actions: {
    save: 'Save',
    getStarted: 'Get Started',
  },
  placeholders: {
    enterTask: 'Enter new task',
  },
  wording: {
    emptyState: 'What do you want to do today?',
    emptyInstruction: 'Tap + to add your tasks',
  },
};
