...
      data={todos}
      scrollEnabled={!!todos.length}
      keyExtractor={todo => todo.id.toString()}
      showsVerticalScrollIndicator={false}
      ListEmptyComponent={() => (
        <Animated.View
          testID="empty-todo"
          style={styles.emptyContainer}
          entering={FadeIn}
          exiting={FadeOut}>
          <SvgXml width={250} height={250} xml={EmptyList} />
          <Text style={Gutters.smallBMargin}>{t('wording.emptyState')}</Text>
          <Text variant="small">{t('wording.emptyInstruction')}</Text>
...
