...

  const renderContent = () => (
    <View style={styles.formContainer}>
      <View style={styles.bullet} />
      <Input
        value={newTodo}
        testID="text-input-task"
        placeholder={t('placeholders.enterTask')}
        onChangeText={setNewTodo}
        style={Gutters.regularBMargin}
      />
      <Button disabled={!newTodo} onPress={onPressSubmit}>
        {t('actions.save')}
...
